examples/invalid_crypto_boundaries/post_quantum_ready_without_pq.argx
module m
crypto sha256 { kind hash status allowed strength classical purpose ["digest"] output_bits 256 }
crypto_boundary Bad {
  allowed_hashes ["sha256"]
  post_quantum_ready true
  key_material denied
  secret_material denied
  execution disabled
  purpose ["test"]
}
